Chapter10/deploy/bookings.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: bookings
spec:
  replicas: 2
  template:
    metadata:
      labels:
        myevents/app: bookings
        myevents/tier: api
    spec:
      containers:
      - name: api
        imagePullPolicy: Never
        image: myevents/bookingservice
        ports:
        - containerPort: 8181
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: bookings
spec:
  selector:
    myevents/app: bookings
    myevents/tier: api
  ports:
  - port: 80
    targetPort: 8181
    name: http
